[gd_scene load_steps=3 format=3 uid="uid://cpx7hsthnnt7n"]

[ext_resource type="FontFile" uid="uid://d0vtg2c7n4x2q" path="res://fonts/Xolonium-Regular.ttf" id="1_c7hq3"]
[ext_resource type="Script" path="res://uhd.gd" id="1_wftah"]

[node name="UHD" type="CanvasLayer"]
script = ExtResource("1_wftah")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.5
offset_right = 36.5
offset_bottom = 81.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_c7hq3")
theme_override_font_sizes/font_size = 64
text = "-1"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -121.0
offset_right = 233.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_c7hq3")
theme_override_font_sizes/font_size = 64
text = "Message of the day!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -238.0
offset_right = 89.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_c7hq3")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
